<resources>
    <string name="app_name">Upcoming Events</string>
    <string name="title_pName">Product Name</string>
    <string name="title_pColor">COLOR : </string>
    <string name="title_pSize">SIZE</string>
    <string name="title_pDescription">DESCRIPTION</string>
    <string name="title_pDetails">DETAILS</string>
    <string name="title_cart">MY CART</string>
    <string name="title_subTotal">SUBTOTAL</string>
    <string name="title_total">TOTAL</string>
    <string name="title_shipping">SHIPPING</string>
    <string name="title_shippingAddr">SHIPPING ADDRESS</string>
    <string name="title_shippingMethod">SHIPPING METHOD</string>
    <string name="title_paymentMethod">PAYMENT METHOD</string>
    <string name="title_confirmOrder">CONFIRM ORDER</string>

    <string name="title_eventName">Event Name</string>
    <string name="title_eventDescription">DESCRIPTION</string>
    <string name="title_eventDetail">EVENT DETAILS</string>
    <string name="title_eventPlace">WHERE</string>
    <string name="title_eventDate">WHEN</string>
    <string name="title_eventTime">TIME</string>
    <string name="title_eventPrice">PRICE</string>
    <string name="btn_save">save this event</string>
    <string name="btn_viewEvent">saved event</string>

    <string name="btn_addCart">add to cart</string>
    <string name="btn_viewCart">view cart</string>
    <string name="btn_checkout">checkout</string>
    <string name="btn_shipMethod">continue to shipping method</string>
    <string name="btn_paymentMethod">continue to payment method</string>
    <string name="btn_confirmOrder">continue to confirm order</string>
    <string name="btn_order">order now</string>
    <string name="btn_continueShipping">continue shipping</string>
    <string name="et_fullname">FULLNAME</string>
    <string name="et_address">ADDRESS</string>
    <string name="et_city">CITY</string>
    <string name="et_state">STATE</string>
    <string name="et_postcode">POSTCODE</string>
    <string name="et_phone">PHONE (optional)</string>
    <string-array name="country">
        <item>Australia</item>
    </string-array>
</resources>
