<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.justwyne.windowshopping.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="4dp">

                <Button
                    android:id="@+id/btnEventList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/btn_viewEvent"/>

                <!--<ImageView-->
                    <!--android:id="@+id/ivImage"-->
                    <!--android:src="@drawable/dress_snow_crop"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="400px"-->
                    <!--android:layout_marginBottom="16dp"/>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tvEvent"
                        android:text="@string/title_eventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="16dp"/>

                    <!--Description-->

                    <TextView
                        android:id="@+id/tvDescriptionTitle"
                        android:text="@string/title_eventDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="8dp"/>

                    <TextView
                        android:id="@+id/tvEventDescription"
                        android:text="No any details."
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"/>

                    <!--Details-->

                    <TextView
                        android:id="@+id/tvDetailTitle"
                        android:text="@string/title_eventDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginBottom="8dp"/>

                        <!--Where-->

                    <TextView
                        android:id="@+id/tvPlaceTitle"
                        android:text="@string/title_eventPlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:id="@+id/tvPlace"
                        android:text="N/A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"/>

                        <!--When-->

                    <TextView
                        android:id="@+id/tvDateTitle"
                        android:text="@string/title_eventDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:id="@+id/tvDate"
                        android:text="N/A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"/>

                        <!--Time-->

                    <TextView
                        android:id="@+id/tvTimeTitle"
                        android:text="@string/title_eventTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:id="@+id/tvTime"
                        android:text="N/A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"/>

                        <!--Price-->

                    <TextView
                        android:id="@+id/tvPriceTitle"
                        android:text="@string/title_eventPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="8dp"/>

                    <TextView
                        android:id="@+id/tvPrices"
                        android:text="N/A"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"/>

                </LinearLayout>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#d3d3d3"
                    android:layout_marginBottom="8dp" />

                <Button
                    android:id="@+id/btnSave"
                    android:text="@string/btn_save"
                    android:layout_below="@id/colorLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
