<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.justwyne.windowshopping.CartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/title_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/cartLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <TextView
                    android:id="@+id/tvSubTotalTitle"
                    android:text="@string/title_subTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:id="@+id/tvSubTotal"
                    android:layout_toRightOf="@id/tvSubTotalTitle"
                    android:text="$ 00.00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#d3d3d3"
                android:layout_marginBottom="8dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="24dp">

                <TextView
                    android:id="@+id/tvTotalTitle"
                    android:text="@string/title_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="16dp"/>
                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_toRightOf="@id/tvTotalTitle"
                    android:text="$ 00.00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checkout"
                    android:background="@color/colorPrimary"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
